# addons

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CODEOWNERS  COPYING  README.md  example.cpp  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
_linters/: mypy.ini  pylintrc  run-all.sh  run-black.sh
automatic_symbol_loading/: README.md  automatic_symbol_loading.py
backtrace_with_time/: README.md  backtrace_with_time.py
bookmarks_recreate/: README.md  bookmarks_recreate.py
completion/: README.md  _udb
count_calls/: README.md  count_calls.py  count_calls_extension.py  extension.py
explain/: README.md  __init__.py  agents.py  amp_agent.py  amp_prompt.md  assets.py  claude_agent.py  codex_agent.py  codex_prompt.md  copilot_cli_agent.py  explain.py  flow_prompt.md  framing_prompt.md  instructions.md  output_utils.py  styles.json  styles.py  system_prompt.md  thinking.txt
extended_evt_log/: README.md  extended_evt_log.py  schema.json
fancy_prompt/: README.md  fancy_prompt.py
follow_fork/: README.md  follow_fork.c
gtest_annotations/: README.md  undo_gtest_annotation.h
gtest_annotations/examples/: CMakeLists.txt  listener_test.cc
k8s_live_recorder/: .gitignore  README.md
lazy_load_symbols/: README.md  load_sym_lazily.py
leak_detector/: README.md  leak_detector.py
load_debug_symbols/: README.md  load_debug_symbols.py
malloc_free_check/: Makefile  README.md  install.py  malloc-free-check.py  malloc-free.py  malloc_free_check_extension.py  memchecker.c
mcp_server/: instructions.md  mcp.py  system_prompt.md  thinking.txt
(+61 files in other folders)
